--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div class="col">
 						<ul id="nav" class="list-inline menucontainer">
 							<li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-								<a href="#"
+								<a href="index.html"
 									class="hvr-sweep-to-bottom"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
@@ -39,7 +39,7 @@
 									class="hvr-sweep-to-bottom"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-								<a href="#"
+								<a href="contact.html"
 									class="hvr-sweep-to-bottom"><i class="fas fa-address-book" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
