changed name on all pages to correct name

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<title>Rosie</title>
+	<title>Adam</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 			<div class="col-md-8">
 				<div class="row no-gutters bg-color-name-title">
 					<div class="col heading">
-						<h1 class="name">Rosie Odenkirk</h1>
+						<h1 class="name">Adam Parker</h1>
 						<h2 class="title">Full Stack Developer</h2>
 					</div>
 				</div>
