--- a/interests.html
+++ b/interests.html
@@ -57,9 +57,9 @@
                     <div class="col-md-12">
                         <h3 class="section-heading uppercase">Conferences and Meetups attended</h3>
                     </div>
+                    <div id="map"></div>
                 </div>
-                <div id="map"></div>
-            </div>
+             </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-groups section-column">
                 <div class="row">
                     <div class="col-md-12">
@@ -160,6 +160,19 @@
             </div>
         </div>
     </footer>
+    <script>
+       function initMap() {
+          var map = new google.maps.Map(document.getElementById("map"), {
+              zoom: 3,
+              center: {
+                  lat: 46.619261,
+                  lng: -33.137466
+              }  
+          });
+       }
+    </script>
+    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZBO-Ufaa4BlnnMuy-RbUARjJ9xHFwDCg&callback=initMap"></script>
 </body>
 
 </html>
