changed src url for marker clustering

--- a/interests.html
+++ b/interests.html
@@ -171,7 +171,7 @@
           });
        }
     </script>
-        <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZBO-Ufaa4BlnnMuy-RbUARjJ9xHFwDCg&callback=initMap"></script>
 </body>
 
