created link to GitHub API

--- a/interests.html
+++ b/interests.html
@@ -66,7 +66,7 @@
 					<div class="col-md-12">
 						<h3 class="section-heading uppercase">Conferences and Meetups attended</h3>
 					</div>
-					<div id="map"></div>
+					<div id="map" class="col-lg-12"></div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-8 bg-color-groups section-column">
